appId: host.exp.Exponent
name: Select Topic and Year
tags:
  - smoke
---
- launchApp
- tapOn: what-of-the-year

- tapOn: "Start"
- waitForAnimationToEnd

- assertVisible: "Game of 2026"

- tapOn:
    id: BackButton

- swipe:
    start: 50%, 37%
    end: 50%, 27%

- swipe:
    start: 50%, 62%
    end: 50%, 52%

- tapOn: "Start"
- waitForAnimationToEnd

- assertVisible: "Movie of 2025"
